--- a/si.css
+++ b/si.css
@@ -3,7 +3,6 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: black;
 }
 
 .container {
@@ -225,4 +224,7 @@ img:hover{
 }
 .link:hover{
     color: aquamarine;
+}
+body{
+    background-color: black;
 }
